memperbaiki bug link di file css saat mode desktop

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
             </li>
             <li>
               <img src="./assets/contacts/youtube.svg">
-              <a  class="coba" href="https://shopee.co.id/" target="_blank"></a></img>
+              <a  class="coba" href="https://www.youtube.com/channel/UC5c25Dw4z_hLGhhT0wwsBcg/featured" target="_blank"></a></img>
             </li>
             <li>
-              <img src="./assets/contacts/github.svg"><a  class="coba" href="https://github.com" target="_blank"></a></img>
+              <img src="./assets/contacts/github.svg"><a  class="coba" href="https://github.com/superrrzzz" target="_blank"></a></img>
             </li>
           </ul>
         </div>
