--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="mobile.css" />
-    <link rel="stylesheet" href="tablet.css" />
-    <link rel="stylesheet" href="xldesktop.css" />
     <title>Document</title>
   </head>
   <body>
@@ -33,7 +30,7 @@
             <h6><a onclick="learnMore()">learn more ></a></h6>
           </div>
           <div>
-            <img src="assets/arabman.png" alt="" />
+            <img src="assets/shark.png" alt="" />
           </div>
         </div>
         <!--  -->
@@ -82,7 +79,6 @@
         </div>
       </div>
     </div>
-
     <script src="script.js"></script>
   </body>
 </html>
