memperbaiki tampilan yang berantakan

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./assets/avatar.svg" type="image/x-icon">
-    <title>Portfolio</title>
+    <title>Portfolio Ala-Ala</title>
   </head>
   <body>
     <div class="container">
@@ -25,9 +25,9 @@
           <div>
             <h3>Hi, i'm SuperZ</h3>
             <h1>I build value through design</h1>
-            <h5>
+            <h4>
               i'm Indonesian designer whol loves building digital products
-            </h5>
+            </h4>
             <h6><a onclick="learnMore()">learn more ></a></h6>
           </div>
           <div>
@@ -36,7 +36,7 @@
         </div>
         <!--  -->
         <div class="about-page li-body">
-          <p>    I am outgoing, dedicated, and open-minded. I get across to people and adjust to changes with ease. I believe that a person should work on developing their professional skills and learning new things all the time. Currently, I am looking for new career opportunities my current job position cannot provide.
+          <p>    I am outgoing, dedicated, and open-minded. I get across to people and adjust to changes with ease. I believe that a person should work on developing their professional skills and learning new things all the time. Currently, I am looking for new career opportunities my current job position cannot provide. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi reiciendis facere neque tempore soluta natus? Officia iste libero a, consectetur harum, quae nesciunt cupiditate eveniet vero asperiores nam blanditiis tempore?
           </p>
         </div>
         <!---->
@@ -56,11 +56,11 @@
         <!--  -->
         <div class="project-page li-body">
           <ul>
-            <li>MY PORTFOLIO</li>
-            <li>DW WJDWCBW  WJBWBLW</li>
+            <li><h1>THIS WEBSITE</h1></li>
+            <!-- <li>DW WJDWCBW  WJBWBLW</li>
             <li>MDNNCC NCJWCW</li>
             <li>DDCWC NWDCLWL WCCLW</li>
-            <li>BCW WCWCW MDVMKSJCB</li>
+            <li>BCW WCWCW MDVMKSJCB</li> -->
           </ul>
         </div>
         <!--  -->
