--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="container">
       <div class="navbar">
         <ul class="wrapper-navbar">
-          <li class="li-navbar" onclick="home()">HOME</li>
-          <li class="li-navbar" onclick="about()">ABOUT</li>
-          <li class="li-navbar" onclick="skill()">SKILL</li>
-          <li class="li-navbar" onclick="project()">PROJECT</li>
-          <li class="li-navbar" onclick="contact()">CONTACT</li>
+          <li class="li-navbar" onclick="clickButton(0)">HOME</li>
+          <li class="li-navbar" onclick="clickButton(1)">ABOUT</li>
+          <li class="li-navbar" onclick="clickButton(2)">SKILL</li>
+          <li class="li-navbar" onclick="clickButton(3)">PROJECT</li>
+          <li class="li-navbar" onclick="clickButton(4)">CONTACT</li>
         </ul>
       </div>
       <!--  -->
@@ -28,7 +28,7 @@
             <h4>
               i'm Indonesian designer whol loves building digital products
             </h4>
-            <h6><a onclick="learnMore()">learn more ></a></h6>
+            <h6><a onclick="clickButton(1)">learn more ></a></h6>
           </div>
           <div>
             <img src="assets/shark.png" alt="" />
