mengubah tombol 'learn more'

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./assets/avatar.svg" type="image/x-icon">
-    <title>Portfolio Ala-Ala</title>
+    <title>Portfolio Simple</title>
   </head>
   <body>
     <div class="container">
@@ -23,7 +23,7 @@
       <div class="wrapper-content">
         <div class="home-page li-body">
           <div>
-            <h3>Hi, i'm SuperZ</h3>
+            <h3>Hi, i'm Zaky</h3>
             <h1>I build value through design</h1>
             <h4>
               i'm Indonesian designer whol loves building digital products
