--- a/index.html
+++ b/index.html
@@ -4,77 +4,112 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./assets/avatar.svg" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="./assets/avatar.svg" type="image/x-icon">
     <title>Portfolio Simple</title>
   </head>
   <body>
     <div class="container">
-      <div class="navbar">
-        <ul class="wrapper-navbar">
-          <li class="li-navbar" onclick="clickButton(0)">HOME</li>
-          <li class="li-navbar" onclick="clickButton(1)">ABOUT</li>
-          <li class="li-navbar" onclick="clickButton(2)">SKILL</li>
-          <li class="li-navbar" onclick="clickButton(3)">PROJECT</li>
-          <li class="li-navbar" onclick="clickButton(4)">CONTACT</li>
-        </ul>
-      </div>
+      <h1 class="header">WELCOME TO MY PORTFOLIO SIMPLE</h1>
       <!--  -->
       <div class="wrapper-content">
-        <div class="home-page li-body">
+        <div class="home content">
+          <div class="title-content-page">
+            <span>H</span>
+            <span>O</span>
+            <span>M</span>
+            <span>E</span>
+          </div>
           <div>
-            <h3>Hi, i'm Zaky</h3>
-            <h1>I build value through design</h1>
+            <h1>Hi, i'm Zaky</h1>
+            <h3>I build value through design</h3>
             <h4>
               i'm Indonesian designer whol loves building digital products
             </h4>
-            <h6><a onclick="clickButton(1)">learn more ></a></h6>
-          </div>
-          <div>
-            <img src="assets/shark.png" alt="" />
           </div>
         </div>
         <!--  -->
-        <div class="about-page li-body">
-          <p>    I am outgoing, dedicated, and open-minded. I get across to people and adjust to changes with ease. I believe that a person should work on developing their professional skills and learning new things all the time. Currently, I am looking for new career opportunities my current job position cannot provide. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi reiciendis facere neque tempore soluta natus? Officia iste libero a, consectetur harum, quae nesciunt cupiditate eveniet vero asperiores nam blanditiis tempore?
+        <div class="about content">
+          <div class="title-content-page">
+            <span>A</span>
+            <span>B</span>
+            <span>O</span>
+            <span>U</span>
+            <span>T</span>
+          </div>
+          <p>
+            I am outgoing, dedicated, and open-minded. I get across to people
+            and adjust to changes with ease. I believe that a person should work
+            on developing their professional skills and learning new things all
+            the time. Currently, I am looking for new career opportunities my
+            current job position cannot provide. Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Nisi reiciendis facere neque tempore
+            soluta natus? Officia iste libero a, consectetur harum, quae
+            nesciunt cupiditate eveniet vero asperiores nam blanditiis tempore?
           </p>
         </div>
         <!---->
-        <div class="skill-page li-body">
+        <div class="skill content">
+          <div class="title-content-page">
+            <span>S</span>
+            <span>K</span>
+            <span>I</span>
+            <span>L</span>
+            <span>L</span>
+          </div>
           <ul>
             <li>
-              <img src="./assets/skills/html5.svg"></img>
-            </li>
-            <li>
-              <img src="./assets/skills/css3.svg"></img>
-            </li>
-            <li>
-              <img src="./assets/skills/javascript.svg"></img>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+                iusto facilis, est ratione odio quam itaque sunt, mollitia quis
+                nulla placeat pariatur dolorum distinctio magnam inventore.
+                Voluptatum ex eaque at.
+              </p>
             </li>
           </ul>
         </div>
         <!--  -->
-        <div class="project-page li-body">
+        <div class="experience content">
+          <div class="title-content-page">
+            <span>E</span>
+            <span>X</span>
+            <span>P</span>
+            <span>E</span>
+            <span>R</span>
+            <span>I</span>
+            <span>E</span>
+            <span>N</span>
+            <span>C</span>
+            <span>E</span>
+          </div>
           <ul>
-            <li><h1>THIS WEBSITE</h1></li>
-            <!-- <li>DW WJDWCBW  WJBWBLW</li>
-            <li>MDNNCC NCJWCW</li>
-            <li>DDCWC NWDCLWL WCCLW</li>
-            <li>BCW WCWCW MDVMKSJCB</li> -->
+            <li>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repellendus amet soluta nulla dolor optio aliquam quisquam cum,
+              nobis ut nostrum eaque saepe, eveniet possimus totam cumque fuga
+              temporibus recusandae facilis.
+            </li>
           </ul>
         </div>
         <!--  -->
-        <div class="contact-page li-body">
+        <div class="contact content">
+          <div class="title-content-page">
+            <span>C</span>
+            <span>O</span>
+            <span>N</span>
+            <span>T</span>
+            <span>A</span>
+            <span>C</span>
+            <span>T</span>
+          </div>
           <ul>
             <li>
-              <img src="./assets/contacts/instagram.svg" href=""><a  class="coba" href="https://www.tokopedia.com" target="_blank"></a></img>
-            </li>
-            <li>
-              <img src="./assets/contacts/youtube.svg">
-              <a  class="coba" href="https://www.youtube.com/channel/UC5c25Dw4z_hLGhhT0wwsBcg/featured" target="_blank"></a></img>
-            </li>
-            <li>
-              <img src="./assets/contacts/github.svg"><a  class="coba" href="https://github.com/superrrzzz" target="_blank"></a></img>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos,
+                illo ex ullam tempora impedit dolorum numquam fugiat? Rem vitae
+                sunt non mollitia nobis, neque aliquid quam repudiandae? A,
+                rerum praesentium!
+              </p>
             </li>
           </ul>
         </div>
